doxygen-awesome.css
/* ... */
div.toc li::before {
    display: none;
}

div.toc ul {
    margin-top: 0
}

div.toc li a {
    font-size: var(--toc-font-size);
    color: var(--page-foreground-color) !important;
    text-decoration: none;
}

div.toc li a:hover, div.toc li a.active {
    color: var(--primary-color) !important;
}

div.toc li a.aboveActive {
    color: var(--page-secondary-foreground-color) !important;
}


@media screen and (max-width: 999px) {
    div.contents .toc {
        max-height: 45vh;
        float: none;
        width: auto;
        margin: 0 0 var(--spacing-medium) 0;
        position: relative;
        top: 0;
        position: relative;
        border: 1px solid var(--separator-color);
        border-radius: var(--border-radius-medium);
        background-color: var(--toc-background);
        box-shadow: var(--box-shadow);
    }

    div.contents .toc.interactive {
        max-height: calc(var(--navigation-font-size) + 2 * var(--spacing-large));
        overflow: hidden;
    }

    div.contents .toc > h3 {
        -webkit-tap-highlight-color: transparent;
        cursor: pointer;
        position: sticky;
        top: 0;
        background-color: var(--toc-background);
        margin: 0;
        padding: var(--spacing-large) 0;
        display: block;
    }

    div.contents .toc.interactive > h3::before {
        content: "";
        width: 0; 
        height: 0; 
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-top: 5px solid var(--primary-color);
        display: inline-block;
        margin-right: var(--spacing-small);
        margin-bottom: calc(var(--navigation-font-size) / 4);
        transform: rotate(-90deg);
        transition: transform var(--animation-duration) ease-out;
    }

    div.contents .toc.interactive.open > h3::before {
        transform: rotate(0deg);
    }

    div.contents .toc.interactive.open {
        max-height: 45vh;
        overflow: auto;
        transition: max-height 0.2s ease-in-out;
    }

    div.contents .toc a, div.contents .toc a.active {
        color: var(--primary-color) !important;
    }

    div.contents .toc a:hover {
        text-decoration: underline;
    }
}

/*
 Page Outline (Doxygen >= 1.14.0)
*/

#page-nav {
    background: var(--page-background-color);
    border-left: 1px solid var(--separator-color);
}

#page-nav #page-nav-resize-handle {
    background: var(--separator-color);
}

#page-nav #page-nav-resize-handle::after {
    border-left: 1px solid var(--primary-color);
    border-right: 1px solid var(--primary-color);
}

#page-nav #page-nav-tree #page-nav-contents {
    top: var(--spacing-large);
}

#page-nav ul.page-outline {
    margin: 0;
    padding: 0;
}

#page-nav ul.page-outline li a {
    font-size: var(--toc-font-size) !important;
    color: var(--page-secondary-foreground-color) !important;
    display: inline-block;
    line-height: calc(2 * var(--toc-font-size));
}

#page-nav ul.page-outline li a a.anchorlink {
    display: none;
}

#page-nav ul.page-outline li.vis ~ * a {
    color: var(--page-foreground-color) !important;
}

#page-nav ul.page-outline li.vis:not(.vis ~ .vis) a, #page-nav ul.page-outline li a:hover {
    color: var(--primary-color) !important;
}

#page-nav ul.page-outline .vis {
    background: var(--page-background-color);
    position: relative;
}

#page-nav ul.page-outline .vis::after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 4px;
    background: var(--page-secondary-foreground-color);
}

#page-nav ul.page-outline .vis:not(.vis ~ .vis)::after {
    top: 1px;
    border-top-right-radius: var(--border-radius-small);
}

#page-nav ul.page-outline .vis:not(:has(~ .vis))::after {
    bottom: 1px;
    border-bottom-right-radius: var(--border-radius-small);
}


#page-nav ul.page-outline .arrow {
    display: inline-block;
}

#page-nav ul.page-outline .arrow span {
    display: none;
}

@media screen and (max-width: 767px) {
    #container {
        grid-template-columns: initial !important;
    }

    #page-nav {
        display: none;
    }
}

/*
 Code & Fragments
 */

code, div.fragment, pre.fragment, span.tt {
    border: 1px solid var(--separator-color);
    overflow: hidden;
}

code, span.tt {
    display: inline;
    background: var(--code-background);
    color: var(--code-foreground);
    padding: 2px 6px;
    border-radius: var(--border-radius-small);
}

div.fragment, pre.fragment {
    border-radius: var(--border-radius-medium);
    margin: var(--spacing-medium) 0;
    padding: calc(var(--spacing-large) - (var(--spacing-large) / 6)) var(--spacing-large);
    background: var(--fragment-background);
    color: var(--fragment-foreground);
    overflow-x: auto;
}
/* ... */

